--- a/map_profiles/unvanquished.ini
+++ b/map_profiles/unvanquished.ini
@@ -4,14 +4,14 @@ bsp = -meta -custinfoparms
 [fast]
 bsp = -meta -custinfoparms
 vis = -fast -saveprt
-light = -faster -patchshadows
+light = -faster -fastallocate -patchshadows
 
 [test]
 bsp = -meta -custinfoparms -samplesize 16
 vis = -saveprt
-light = -faster -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
+light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
 
 [final]
 bsp = -meta -custinfoparms -samplesize 8
 vis = -saveprt
-light = -fast -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external
+light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external
