profile based navmesh and minimap generation, fix merge_bsp multithread issue

--- a/map_profiles/unvanquished.ini
+++ b/map_profiles/unvanquished.ini
@@ -10,8 +10,12 @@ light = -faster -fastallocate -patchshadows
 bsp = -meta -custinfoparms -samplesize 16
 vis = -saveprt
 light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
+source =
 
 [final]
 bsp = -meta -custinfoparms -samplesize 8
 vis = -saveprt
 light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external
+nav =
+minimap =
+source =
