--- a/profiles/maps/unvanquished.ini
+++ b/profiles/maps/unvanquished.ini
@@ -10,7 +10,9 @@ light = -faster -fastallocate -patchshadows
 bsp = -meta -custinfoparms -samplesize 16
 vis = -saveprt
 light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
-source =
+nav =
+minimap =
+copy =
 
 [final]
 bsp = -meta -custinfoparms -samplesize 8
@@ -18,4 +20,4 @@ vis = -saveprt
 light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external
 nav =
 minimap =
-source =
+copy =
