--- a/profiles/maps/unvanquished.ini
+++ b/profiles/maps/unvanquished.ini
@@ -1,10 +1,9 @@
-[novis]
-bsp = -meta -custinfoparms
+[:config:]
+extend = common
+copy = yes
 
-[fast]
-bsp = -meta -custinfoparms
-vis = -fast -saveprt
-light = -faster -fastallocate -patchshadows
+[all]
+all = -game unvanquished
 
 [test]
 bsp = -meta -custinfoparms -samplesize 16
@@ -12,7 +11,6 @@ vis = -saveprt
 light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
 nav =
 minimap =
-copy =
 
 [final]
 bsp = -meta -custinfoparms -samplesize 8
@@ -20,4 +18,3 @@ vis = -saveprt
 light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external
 nav =
 minimap =
-copy =
