more game profiles

--- a/profiles/maps/daemon.ini
+++ b/profiles/maps/daemon.ini
@@ -1,5 +1,5 @@
 [:config:]
-extend = daemon
+extend = common
 copy = yes
 
 [all]
@@ -9,12 +9,8 @@ all = -game unvanquished
 bsp = -meta -custinfoparms -samplesize 16
 vis = -saveprt
 light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
-nav =
-minimap =
 
 [final]
 bsp = -meta -custinfoparms -samplesize 8
 vis = -saveprt
 light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external
-nav =
-minimap =
