--- a/profiles/maps/unrealarena.ini
+++ b/profiles/maps/unrealarena.ini
@@ -3,18 +3,14 @@ extend = daemon
 copy = yes
 
 [all]
-all = -game unvanquished
+all = -game unrealarena
 
 [test]
 bsp = -meta -custinfoparms -samplesize 16
 vis = -saveprt
 light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
-nav =
-minimap =
 
 [final]
 bsp = -meta -custinfoparms -samplesize 8
 vis = -saveprt
 light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external
-nav =
-minimap =
