map profile now supports multiple tools

--- a/profile/map/common.ini
+++ b/profile/map/common.ini
@@ -1,21 +1,26 @@
+# Author:  Thomas DEBESSE <dev@illwieckz.net>
+# License: CC0 1.0
+
 [_init_]
 default = fast
-copy = yes
+
+[all]
+copy = !copy
 
 [novis]
-bsp = -meta -custinfoparms
+bsp = !q3map2:bsp -meta -custinfoparms
 
 [fast]
-bsp = -meta -custinfoparms
-vis = -fast -saveprt
-light = -faster -fastallocate -patchshadows
+bsp = !q3map2:bsp -meta -custinfoparms
+vis = !q3map2:vis -fast -saveprt
+rad = !q3map2:light -faster -fastallocate -patchshadows
 
 [test]
-bsp = -meta -custinfoparms -samplesize 16
-vis = -saveprt
-light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe
+bsp = !q3map2:bsp -meta -custinfoparms -samplesize 16
+vis = !q3map2:vis -saveprt
+rad = !q3map2:light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe
 
 [final]
-bsp = -meta -custinfoparms -samplesize 8
-vis = -saveprt
-light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -deluxe
+bsp = !q3map2:bsp -meta -custinfoparms -samplesize 8
+vis = !q3map2:vis -saveprt
+rad = !q3map2:light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -deluxe
