--- a/profile/map/unrealarena.ini
+++ b/profile/map/unrealarena.ini
@@ -1,16 +1,26 @@
+# Author:  Thomas DEBESSE <dev@illwieckz.net>
+# License: CC0 1.0
+
 [_init_]
-extend = daemon
-copy = yes
+extend = common
 
 [all]
-all = -game unrealarena
+copy = !copy
+
+[novis]
+bsp = !q3map2:bsp -game unrealarena -meta -custinfoparms
+
+[fast]
+bsp = !q3map2:bsp -game unrealarena -meta -custinfoparms
+vis = !q3map2:vis -game unrealarena -fast -saveprt
+rad = !q3map2:light -game unrealarena -faster -fastallocate -patchshadows
 
 [test]
-bsp = -meta -custinfoparms -samplesize 16
-vis = -saveprt
-light = -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
+bsp = !q3map2:bsp -game unrealarena -meta -custinfoparms -samplesize 16
+vis = !q3map2:vis -game unrealarena -saveprt
+rad = !q3map2:light -game unrealarena -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external
 
 [final]
-bsp = -meta -custinfoparms -samplesize 8
-vis = -saveprt
-light = -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external
+bsp = !q3map2:bsp -game unrealarena -meta -custinfoparms -samplesize 8
+vis = !q3map2:vis -game unrealarena -saveprt
+rad = !q3map2:light -game unrealarena -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external
