improve map compiler
- better profiles
- default option is to keep source
- now uses tool function dict

--- a/profile/map/common.ini
+++ b/profile/map/common.ini
@@ -2,25 +2,4 @@
 # License: CC0 1.0
 
 [_init_]
-default = fast
-
-[all]
-copy = !copy
-
-[novis]
-bsp = !q3map2:bsp -meta -custinfoparms
-
-[fast]
-bsp = !q3map2:bsp -meta -custinfoparms
-vis = !q3map2:vis -fast -saveprt
-rad = !q3map2:light -faster -fastallocate -patchshadows
-
-[test]
-bsp = !q3map2:bsp -meta -custinfoparms -samplesize 16
-vis = !q3map2:vis -saveprt
-rad = !q3map2:light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe
-
-[final]
-bsp = !q3map2:bsp -meta -custinfoparms -samplesize 8
-vis = !q3map2:vis -saveprt
-rad = !q3map2:light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -deluxe
+source = true
