--- a/profile/map/unvanquished.ini
+++ b/profile/map/unvanquished.ini
@@ -3,9 +3,7 @@
 
 [_init_]
 extend = common
-
-[all]
-copy = !copy
+default = final
 
 [novis]
 bsp = !q3map2:bsp -game unvanquished -meta -custinfoparms
