--- a/profile/file/common.toml
+++ b/profile/file/common.toml
@@ -92,14 +92,15 @@ description = "Common Text File"
 build = "copy"
 
 [common_slothdir]
-file_ext = ".slothdir"
+file_base = "slothdir"
+file_ext = ".toml"
 description = "Common Slothdir Description File"
 prepare = "expand_slothdir"
 
 [common_sloth]
-# handled by slothdir
 file_ext = ".sloth"
 description = "Common Sloth Description File"
+# handled by slothdir
 build = "ignore"
 
 [common_readme]
