improve colorgrade detection

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -118,17 +118,22 @@ file_ext = [
 ]
 build = "copy"
 
-[daemon_colorgrade]
+[daemon_gfx]
 inherit = "daemon_texture"
 dir_ancestor_name = "gfx"
-file_base = "colorgrading"
+description = "Graphical effect"
+
+[daemon_colorgrade]
+inherit = "daemon_gfx"
+dir_parent_name = "cgrading"
 description = "ColorGrade"
 build = "convert_lossless_webp"
 
-[daemon_png_colorgrade]
-inherit = "daemon_colorgrade"
-file_ext = ".png"
-build = "copy"
+[daemon_colorgrade_bis]
+inherit = "daemon_gfx"
+file_base = "colorgrading"
+description = "ColorGrade"
+build = "convert_lossless_webp"
 
 [daemon_arena]
 file_ext = ".arena"
