detect unvanquished backgrounds

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -35,7 +35,7 @@ dir_ancestor_name = [
 	"icons",
 	"ui",
 ]
-description = "Texture"
+description = "User interface texture"
 build = "convert_crn"
 
 [daemon_ui_crn]
