--- a/profile/file/unvanquished.conf
+++ b/profile/file/unvanquished.conf
@@ -3,3 +3,10 @@
 
 [_init_]
 extend = "daemon"
+
+[unvanquished_ui_background]
+inherit = "daemon_ui_texture"
+dir_ancestor_name = "ui"
+dir_father_name = "background"
+description = "Background user interface texture"
+build = "convert_lossless_webp"
