better bspdir profiles, ensure entities are detected right

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -159,14 +159,28 @@ description = "Map"
 build = "compile_bsp"
 
 [daemon_bspdir_lump]
+dir_ancestor_name = "maps"
+dir_father_ext = ".bspdir"
+description = "BSP Lump"
+build = "merge_bsp"
+
+[daemon_bspdir_text_lump]
+inherit = "daemon_bspdir_lump"
 file_ext = [
 	".txt",
 	".csv",
+]
+description = "BSP Editable Lump"
+build = "merge_bsp"
+
+[daemon_bspdir_blob_lump]
+inherit = "daemon_bspdir_lump"
+file_ext = [
 	".bin",
 ]
 dir_ancestor_name = "maps"
 dir_father_ext = ".bspdir"
-description = "BSP Lump"
+description = "BSP Blob Lump"
 build = "merge_bsp"
 
 [daemon_bspdir_lightmap]
@@ -176,6 +190,17 @@ dir_father_name = "lightmaps.d"
 dir_grandfather_ext = ".bspdir"
 description = "BSP LightMap"
 build = "merge_bsp"
+
+[daemon_bsp]
+file_ext = ".bsp"
+description = "BSP File"
+build = "copy_bsp"
+
+[daemon_navmesh]
+dir_ancestor_name = "maps"
+file_ext = ".navMesh"
+description = "Navigation Mesh"
+build = "copy"
 
 [daemon_sound]
 inherit = "common_sound"
@@ -215,14 +240,3 @@ inherit = "common_iqe_model"
 dir_ancestor_name = "models"
 description = "IQE Model File"
 build = "compile_iqm"
-
-[daemon_navmesh]
-dir_ancestor_name = "maps"
-file_ext = ".navMesh"
-description = "Navigation Mesh"
-build = "copy"
-
-[daemon_bsp]
-file_ext = ".bsp"
-description = "BSP File"
-build = "copy_bsp"
