improve daemon file profile

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -147,6 +147,14 @@ dir_ancestor_name = "meta"
 description = "LevelShot"
 build = "convert_jpg"
 
+[daemon_crn_levelshot]
+inherit= "daemon_levelshot"
+file_ext = [
+	".crn",
+	".dds",
+]
+build = "copy"
+
 [daemon_about]
 dir_ancestor_name = "about"
 description = "About file"
