add support to iqm command file (requires fteqw's iqm tool)
it's now possible to scale, rotation and offset iqm models at build time

--- a/profile/file/common.conf
+++ b/profile/file/common.conf
@@ -74,7 +74,14 @@ build = "copy"
 inherit = "common_model"
 file_ext = ".iqe"
 description = "Common IQE Model File"
-build = "compile_iqm"
+prepare = "compile_iqm"
+build = "ignore"
+
+[common_iqe_config_model]
+file_ext = ".iqe.cfg"
+description = "Common IQE command file"
+prepare = "ignore"
+build = "ignore"
 
 [common_model_source]
 file_ext = [
