--- a/profile/file/common.conf
+++ b/profile/file/common.conf
@@ -79,7 +79,7 @@ build = "ignore"
 
 [common_iqe_config_model]
 file_ext = ".iqe.cfg"
-description = "Common IQE command file"
+description = "Common IQE Command File"
 prepare = "ignore"
 build = "ignore"
 
