better unvanquished file profile
- also recognize badly named normal maps using non-standard (in the unvanquished way) suffixes
- also recognize some others colorgrade basename
- do not require a sound to be in sound/ neither models/ to be recognized

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -86,7 +86,12 @@ build = "copy"
 
 [daemon_normalmap]
 inherit = "daemon_texture"
-file_suffix = "_n"
+file_suffix = [
+	"_n",
+	# those are non-standards
+	"_norm",
+	"_normal",
+]
 description = "Normal map"
 build = "convert_normalized_crn"
 
@@ -131,7 +136,10 @@ build = "convert_lossless_webp"
 
 [daemon_colorgrade_bis]
 inherit = "daemon_gfx"
-file_base = "colorgrading"
+file_base = [
+	"cgrading",
+	"colorgrading",
+]
 description = "ColorGrade"
 build = "convert_lossless_webp"
 
@@ -212,10 +220,6 @@ build = "copy"
 
 [daemon_sound]
 inherit = "common_sound"
-dir_ancestor_name = [
-	"models",
-	"sound",
-]
 description = "Sound File"
 build = "convert_opus"
 
