now supports parallelized map compilation
for example light, navmesh and minimap stage
can run in parallel once vis stage is done

--- a/profile/map/unrealarena.conf
+++ b/profile/map/unrealarena.conf
@@ -5,20 +5,23 @@
 extend = "common"
 default = "final"
 
+[_q3map2_]
+game="@game"
+
 [novis]
-bsp = "!q3map2:bsp -game unrealarena -meta -custinfoparms"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
 
 [fast]
-bsp = "!q3map2:bsp -game unrealarena -meta -custinfoparms"
-vis = "!q3map2:vis -game unrealarena -fast -saveprt"
-rad = "!q3map2:light -game unrealarena -faster -fastallocate -patchshadows"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
+vis = { tool="q3map2", opts="-vis -fast" }
+light = { tool="q3map2", opts="-light -faster -fastallocate -patchshadows" }
 
 [test]
-bsp = "!q3map2:bsp -game unrealarena -meta -custinfoparms -samplesize 16"
-vis = "!q3map2:vis -game unrealarena -saveprt"
-rad = "!q3map2:light -game unrealarena -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms -samplesize 16" }
+vis = { tool="q3map2", opts="-vis" }
+light = { tool="q3map2", opts="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
 
 [final]
-bsp = "!q3map2:bsp -game unrealarena -meta -custinfoparms -samplesize 8"
-vis = "!q3map2:vis -game unrealarena -saveprt"
-rad = "!q3map2:light -game unrealarena -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms -samplesize 8" }
+vis = { tool="q3map2", opts="-vis" }
+light = { tool="q3map2", opts="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external" }
