--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -5,24 +5,27 @@
 extend = "common"
 default = "final"
 
+[_q3map2_]
+game="@game"
+
 [novis]
-bsp = "!q3map2:bsp -game unvanquished -meta -custinfoparms"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
 
 [fast]
-bsp = "!q3map2:bsp -game unvanquished -meta -custinfoparms"
-vis = "!q3map2:vis -game unvanquished -fast -saveprt"
-rad = "!q3map2:light -game unvanquished -faster -fastallocate -patchshadows"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
+vis = { tool="q3map2", opts="-vis -fast" }
+light = { tool="q3map2", opts="-light -faster -fastallocate -patchshadows" }
 
 [test]
-bsp = "!q3map2:bsp -game unvanquished -meta -custinfoparms -samplesize 16"
-vis = "!q3map2:vis -game unvanquished -saveprt"
-rad = "!q3map2:light -game unvanquished -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external"
-nav = "!daemonmap:nav"
-minimap = "!q3map2:minimap -game unvanquished"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms -samplesize 16" }
+vis = { tool="q3map2", opts="-vis" }
+light = { tool="q3map2", opts="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
+nav = { tool="daemonmap", opts="-nav" }
+minimap = { tool="q3map2", opts="-minimap" }
 
 [final]
-bsp = "!q3map2:bsp -game unvanquished -meta -custinfoparms -samplesize 8"
-vis = "!q3map2:vis -game unvanquished -saveprt"
-rad = "!q3map2:light -game unvanquished -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external"
-nav = "!daemonmap:nav"
-minimap = "!q3map2:minimap -game unvanquished"
+bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms -samplesize 8" }
+vis = { tool="q3map2", opts="-vis" }
+light = { tool="q3map2", opts="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external" }
+nav = { tool="daemonmap", opts="-nav" }
+minimap = { tool="q3map2", opts="-minimap" }
