add a nometa map profile to allow quicker debug run
q3map2's bsp stage with meta is super slow, using the “nometa”
map profile, a developper can test map compilation process
without having to wait for ages

--- a/profile/map/unrealarena.conf
+++ b/profile/map/unrealarena.conf
@@ -8,6 +8,9 @@ default = "final"
 [_q3map2_]
 game="@game"
 
+[nometa]
+bsp = { tool="q3map2", opts="-bsp -custinfoparms" }
+
 [novis]
 bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
 
