--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -8,6 +8,9 @@ default = "final"
 [_q3map2_]
 game="@game"
 
+[nometa]
+bsp = { tool="q3map2", opts="-bsp -custinfoparms" }
+
 [novis]
 bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
 
