always add -custinfoparms to q3map2 bsp stage
hence there is no need to add it to map profiles

--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -9,25 +9,25 @@ default = "final"
 game="@game"
 
 [nometa]
-bsp = { tool="q3map2", opts="-bsp -custinfoparms" }
+bsp = { tool="q3map2", opts="-bsp" }
 
 [novis]
-bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
+bsp = { tool="q3map2", opts="-bsp -meta" }
 
 [fast]
-bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms" }
+bsp = { tool="q3map2", opts="-bsp -meta" }
 vis = { tool="q3map2", opts="-vis -fast" }
 light = { tool="q3map2", opts="-light -faster -fastallocate -patchshadows" }
 
 [test]
-bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms -samplesize 16" }
+bsp = { tool="q3map2", opts="-bsp -meta -samplesize 16" }
 vis = { tool="q3map2", opts="-vis" }
 light = { tool="q3map2", opts="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", opts="-nav" }
 minimap = { tool="q3map2", opts="-minimap" }
 
 [final]
-bsp = { tool="q3map2", opts="-bsp -meta -custinfoparms -samplesize 8" }
+bsp = { tool="q3map2", opts="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", opts="-vis" }
 light = { tool="q3map2", opts="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", opts="-nav" }
