--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -9,26 +9,26 @@ default = "final"
 game="${game}"
 
 [nometa]
-bsp = { tool="q3map2", opts="-bsp" }
+bsp = { tool="q3map2", options="-bsp" }
 
 [novis]
-bsp = { tool="q3map2", opts="-bsp -meta" }
+bsp = { tool="q3map2", options="-bsp -meta" }
 
 [fast]
-bsp = { tool="q3map2", opts="-bsp -meta" }
-vis = { tool="q3map2", opts="-vis -fast" }
-light = { tool="q3map2", opts="-light -faster -fastallocate -patchshadows" }
+bsp = { tool="q3map2", options="-bsp -meta" }
+vis = { tool="q3map2", options="-vis -fast" }
+light = { tool="q3map2", options="-light -faster -fastallocate -patchshadows" }
 
 [test]
-bsp = { tool="q3map2", opts="-bsp -meta -samplesize 16" }
-vis = { tool="q3map2", opts="-vis" }
-light = { tool="q3map2", opts="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
-nav = { tool="daemonmap", opts="-nav" }
-minimap = { tool="q3map2", opts="-minimap" }
+bsp = { tool="q3map2", options="-bsp -meta -samplesize 16" }
+vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
+nav = { tool="daemonmap", options="-nav" }
+minimap = { tool="q3map2", options="-minimap" }
 
 [final]
-bsp = { tool="q3map2", opts="-bsp -meta -samplesize 8" }
-vis = { tool="q3map2", opts="-vis" }
-light = { tool="q3map2", opts="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external" }
-nav = { tool="daemonmap", opts="-nav" }
-minimap = { tool="q3map2", opts="-minimap" }
+bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
+vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 5 -deluxe -lightmapsize 1024 -external" }
+nav = { tool="daemonmap", options="-nav" }
+minimap = { tool="q3map2", options="-minimap" }
