rework map compilation profiles, add smokinguns one

--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -2,18 +2,25 @@
 # License: CC0 1.0
 
 [_init_]
-extend = "daemon"
+extend = "common"
+
+[nometa]
+bsp = { tool="q3map2", options="-bsp" }
+
+[novis]
+bsp = { tool="q3map2", options="-bsp -meta" }
+
+[fast]
+bsp = { tool="q3map2", options="-bsp -meta" }
+vis = { tool="q3map2", options="-vis -fast" }
+light = { tool="q3map2", options="-light -faster -fastallocate -patchshadows" }
 
 [test]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
 light = { tool="q3map2", options="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
-nav = { tool="daemonmap", options="-nav" }
-minimap = { tool="q3map2", options="-minimap" }
 
 [final]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
 light = { tool="q3map2", options="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
-nav = { tool="daemonmap", options="-nav" }
-minimap = { tool="q3map2", options="-minimap" }
