profile/file/daemon: also look for skyboxes in textures/ even if it's wrong

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -57,7 +57,7 @@ file_suffix = [
 	"_rt",
 	"_up",
 ]
-dir_ancestor_name = "env"
+dir_ancestor_name = [ "textures", "env" ]
 description = "Skybox"
 build = "convert_lossy_webp"
 
