q3map2: introduce -nobouncestore and do some other touchup

--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -8,19 +8,19 @@ extend = "common"
 bsp = { tool="q3map2", options="-bsp" }
 
 [novis]
-bsp = { tool="q3map2", options="-bsp -meta" }
+bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 
 [fast]
-bsp = { tool="q3map2", options="-bsp -meta" }
+bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 vis = { tool="q3map2", options="-vis -fast" }
-light = { tool="q3map2", options="-light -faster -fastallocate -patchshadows" }
+light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -lightmapsize 1024 -external" }
 
 [test]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -faster -fastallocate -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
 
 [final]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fast -fastallocate -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fast -fastlightmapsearch -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -nobouncestore -deluxe -lightmapsize 1024 -external" }
