add normalHeightMap support
set daemon file conversion profile to webp
as daemon is known to fail to read some
of those textures when crunched

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -103,6 +103,22 @@ file_ext = [
 ]
 build = "copy"
 
+[daemon_normalheightmap]
+inherit = "daemon_texture"
+file_suffix = [
+	"_nh",
+]
+description = "NormalHeight map"
+build = "convert_lossy_webp"
+
+[daemon_crn_normalheightmap]
+inherit = "daemon_normalheightmap"
+file_ext = [
+	".crn",
+	".dds",
+]
+build = "copy"
+
 [daemon_minimap_sidecar]
 file_ext = ".minimap"
 dir_ancestor_name = "minimaps"
