profile/map/daemon: fast uses deluxe mapping, add faster for no deluxe

--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -10,10 +10,15 @@ bsp = { tool="q3map2", options="-bsp" }
 [novis]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 
-[fast]
+[faster]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 vis = { tool="q3map2", options="-vis -fast" }
 light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -lightmapsize 1024 -external" }
+
+[fast]
+bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
+vis = { tool="q3map2", options="-vis -fast" }
+light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -deluxe -lightmapsize 1024 -external" }
 
 [test]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 16" }
