--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -28,4 +28,4 @@ light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -pat
 [final]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fast -fastlightmapsearch -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -nobouncestore -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fast -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
