--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -14,6 +14,6 @@ minimap = { tool="q3map2", options="-minimap" }
 [final]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -nobouncestore -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", options="-nav" }
 minimap = { tool="q3map2", options="-minimap" }
