urcheon: rename bad jpg action to low jpg, it's about low quality, bad may means something is wrong

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -77,7 +77,7 @@ build = "convert_lossless_webp"
 inherit = "daemon_texture"
 file_suffix = "_p"
 description = "Editor preview image"
-build = "convert_bad_jpg"
+build = "convert_low_jpg"
 
 [daemon_jpg_preview]
 inherit = "daemon_preview"
