profile/map: rework build profiles, “final” is now named “release”

--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -11,9 +11,16 @@ light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -pat
 nav = { tool="daemonmap", options="-nav" }
 minimap = { tool="q3map2", options="-minimap" }
 
-[final]
+[release]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
 light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+nav = { tool="daemonmap", options="-nav" }
+minimap = { tool="q3map2", options="-minimap" }
+
+[extreme]
+bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
+vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", options="-nav" }
 minimap = { tool="q3map2", options="-minimap" }
