--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -10,22 +10,31 @@ bsp = { tool="q3map2", options="-bsp" }
 [novis]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 
-[faster]
+[nolight]
+bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
+vis = { tool="q3map2", options="-vis -fast" }
+
+[nodeluxe]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 vis = { tool="q3map2", options="-vis -fast" }
 light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -lightmapsize 1024 -external" }
 
-[fast]
+[nosample]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 vis = { tool="q3map2", options="-vis -fast" }
 light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -deluxe -lightmapsize 1024 -external" }
 
-[test]
+[nobounce]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
 light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
 
-[final]
+[release]
 bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fast -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+
+[extreme]
+bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
+vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
