--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -25,16 +25,16 @@ vis = { tool="q3map2", options="-vis -fast" }
 light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -deluxe -lightmapsize 1024 -external" }
 
 [nobounce]
-bsp = { tool="q3map2", options="-bsp -meta -samplesize 16" }
+bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -patchshadows -samples 2 -samplesize 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
 
 [release]
-bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
+bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 
 [extreme]
-bsp = { tool="q3map2", options="-bsp -meta -samplesize 8" }
+bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
