--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -27,14 +27,14 @@ light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshado
 [nobounce]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
 
 [release]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 
 [extreme]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
