profile/map: use nocollapse light stage option

--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -7,20 +7,20 @@ extend = "daemon"
 [nobounce]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastlightmapsearch -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", options="-nav" }
 minimap = { tool="q3map2", options="-minimap" }
 
 [release]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", options="-nav" }
 minimap = { tool="q3map2", options="-minimap" }
 
 [extreme]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 nav = { tool="daemonmap", options="-nav" }
 minimap = { tool="q3map2", options="-minimap" }
