--- a/profile/map/daemon.conf
+++ b/profile/map/daemon.conf
@@ -17,24 +17,24 @@ vis = { tool="q3map2", options="-vis -fast" }
 [nodeluxe]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 vis = { tool="q3map2", options="-vis -fast" }
-light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastlightmapsearch -patchshadows -lightmapsize 1024 -external" }
 
 [nosample]
 bsp = { tool="q3map2", options="-bsp -meta -fastmeta" }
 vis = { tool="q3map2", options="-vis -fast" }
-light = { tool="q3map2", options="-light -faster -fastlightmapsearch -patchshadows -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastlightmapsearch -patchshadows -deluxe -lightmapsize 1024 -external" }
 
 [nobounce]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -faster -fastlightmapsearch -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastlightmapsearch -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
 
 [release]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -fastbounce -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 
 [extreme]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -fastlightmapsearch -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
