profile/file: minor changes

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -169,7 +169,7 @@ build = "copy"
 inherit = "common_pixmap"
 dir_ancestor_name = "meta"
 description = "LevelShot"
-build = "convert_jpg"
+build = "convert_crn"
 
 [daemon_crn_levelshot]
 inherit= "daemon_levelshot"
