profile/map: re-add fast build profile

--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -10,6 +10,12 @@ vis = { tool="q3map2", options="-vis" }
 light = { tool="q3map2", options="-light -nocollapse -faster -fastallocate -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
 minimap = { tool="q3map2", options="-minimap" }
 
+[fast]
+bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 16" }
+vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastbounce -fastallocate -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -bouncegrid -bounce 1 -deluxe -lightmapsize 1024 -external" }
+minimap = { tool="q3map2", options="-minimap" }
+
 [release]
 bsp = { tool="q3map2", options="-bsp -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
