profile/file: ignore GIMP curves files

--- a/profile/file/common.conf
+++ b/profile/file/common.conf
@@ -13,6 +13,13 @@ file_ext = [
 description = "Pixmap Editor File"
 build = "ignore"
 
+[common_gimp_curves]
+file_ext = [
+	"curves",
+]
+description = "Gimp curves file"
+build = "ignore"
+
 [common_vector_picture]
 file_ext = [
 	".svg",
