profile/file: fix .curves extension

--- a/profile/file/common.conf
+++ b/profile/file/common.conf
@@ -14,9 +14,7 @@ description = "Pixmap Editor File"
 build = "ignore"
 
 [common_gimp_curves]
-file_ext = [
-	"curves",
-]
+file_ext = ".curves"
 description = "Gimp curves file"
 build = "ignore"
 
