profile/file: ignore sloth-*.txt files

--- a/profile/file/common.conf
+++ b/profile/file/common.conf
@@ -121,6 +121,14 @@ description = "Common Sloth Description File"
 # handled by slothrun
 build = "ignore"
 
+[common_sloth_Feature]
+inherit = "common_text"
+file_prefix = "sloth-"
+file_ext = ".txt"
+description = "Common Sloth Feature File"
+# handled by slothrun
+build = "ignore"
+
 [common_readme]
 inherit = "common_text"
 file_base = "README"
