urcheon/action: add compile_ase and use it for mapmodels

--- a/profile/file/daemon.conf
+++ b/profile/file/daemon.conf
@@ -190,6 +190,13 @@ dir_ancestor_name = "maps"
 description = "Map"
 build = "compile_bsp"
 
+[daemon_ase]
+file_ext = "map"
+dir_ancestor_name = "models"
+description = "Map object"
+prepare = "compile_ase"
+build = "copy"
+
 [daemon_bspdir_lump]
 dir_ancestor_name = "maps"
 dir_father_ext = ".bspdir"
