--- a/profile/map/common.conf
+++ b/profile/map/common.conf
@@ -10,3 +10,7 @@ game="${game}"
 
 [copy]
 copy = { tool="copy" }
+
+[ase]
+bsp = { tool="q3map2", options="-bsp -meta -patchmeta" }
+convert = { tool="q3map2", options="-convert -format ase" }
