urcheon/action: add compile_obj

--- a/profile/map/common.conf
+++ b/profile/map/common.conf
@@ -14,3 +14,7 @@ copy = { tool="copy" }
 [ase]
 bsp = { tool="q3map2", options="-bsp -meta -patchmeta" }
 convert = { tool="q3map2", options="-convert -format ase" }
+
+[obj]
+bsp = { tool="q3map2", options="-bsp -meta -patchmeta" }
+convert = { tool="q3map2", options="-convert -format obj" }
